<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_aniadir_gol"
        android:title="@string/aniadir_gol"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_editar_partido"
        android:title="@string/editar_partido"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_aniadir_titular"
        android:title="@string/aniadir_titular"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_gestionar_estadisticas"
        android:title="@string/gestionar_estadisticas"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_aniadir_tarjeta"
        android:title="@string/aniadir_tarjeta"
        app:showAsAction="never"/>
</menu>