<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logout"
        android:title="Cerrar sesión"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_equipos"
        android:title="@string/equipos"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_noticias"
        android:title="@string/noticias"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_estadisticas"
        android:title="@string/estadisticas_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_perfil"
        android:title="@string/perfil"
        app:showAsAction="never"/>
</menu>